# bounded-agents

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  langgraph.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: COMPARISON.md  DESIGN.md  PROGRESS.md  onme.md
examples/company_research/: fetchers.py  fields.py  graph.py  llm_client.py  main.py  prompts.py  service.py  settings.py  state.py
examples/company_research/nodes/: fetch.py  judge_node.py  summarize.py  validate.py
examples/company_research/prompts/: general.md
examples/task_assistant/: agent.py  main.py  settings.py  store.py  tools.py
src/: config.py  main.py
src/bounded/: __init__.py  agent.py  arbitration.py  capability.py  context.py  credentials.py  json_repair.py  judge.py  memory.py  observability.py  prompts.py  registry.py  resilience.py
src/bounded/adapters/: __init__.py  agent.py  cli.py  langgraph.py  mcp.py
src/bounded/llm/: __init__.py  base.py  openai_provider.py
src/bounded/sinks/: __init__.py  base.py  csv.py  jsonl.py  sheets.py
src/graphs/: main.py
src/graphs/nodes/: fetcher.py  judge.py  summarizer.py  validation.py
src/graphs/states/: research.py
src/helpers/: json_validators.py  read_markdown.py  state_addition.py
src/integrations/: llm.py  scraper.py  sheet.py
src/prompts/: general.md
src/services/: company_research.py
tests/: conftest.py
tests/integration/: test_fetchers.py  test_task_assistant_agent.py
tests/unit/: test_adapters_agent.py  test_agent.py  test_arbitration.py  test_cli_adapter.py  test_company_research_validate.py  test_context.py  test_credentials.py  test_json_repair.py  test_judge.py  test_langgraph_adapter.py  test_llm_base.py  test_mcp_adapter.py  test_memory.py  test_observability.py  test_openai_provider.py  test_prompts.py  test_registry.py  test_resilience.py  test_sinks.py  test_task_assistant_tools.py
