[project]
name = "search-to-sheets"
version = "0.1.1"
description = "Automates company research using LLM based summarization with Google Sheets integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "langgraph>=1.0.0,<2.0.0",
    "openai>=1.99.5",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "structlog>=25.4.0",
    "tavily-python>=0.7.10",
    "python-dotenv>=1.0.1",
    "beautifulsoup4==4.14.3",
    "readability-lxml==0.8.4.1",
]

[tool.langgraph.dev]
ignore = [
    "**/__pycache__/**",
    "**/*.pyc",
    ".venv/**",
    "sts/**",
    ".mypy_cache/**",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
