[project]
name = "bounded-agents"
version = "0.3.1"
description = "Deterministic orchestration for LLM pipelines: authority in code, phrasing in the LLM. Company research is the reference example."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "beautifulsoup4==4.14.3",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "langchain-core>=0.3.0",
    "langgraph>=1.0.0,<2.0.0",
    "langsmith>=0.4.0",
    "openai>=1.99.5",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.1",
    "readability-lxml==0.8.4.1",
    "requests>=2.32.0",
    "structlog>=25.4.0",
    "tavily-python>=0.7.10",
    "tenacity>=9.0.0",
    "typing-extensions>=4.12.0",
]

[project.urls]
Repository = "https://github.com/bashatahamal/bounded-agents"

[tool.langgraph.dev]
ignore = [
    "**/__pycache__/**",
    "**/*.pyc",
    ".venv/**",
    ".mypy_cache/**",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
searchapp = "company_research.main:main"
task-assistant = "task_assistant.main:main"

[tool.setuptools.packages.find]
where = ["src", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
